--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess The Number</title>
-</head>
-<body>
-    <h1>Guess the Number</h1>
-</body>
-</html>
+{% extends 'base.html' %} 
+{% block title %} 
+    Pagina Principal
+{% endblock %}
+
+{% block content %}
+    <h1>Pagina Principal</h1>
+    <form action="POST">
+    <input type="text" placeholder="Ingresa Un Nombre De Usuario"> 
+    <input type="password" placeholder="Ingresa Una Contraseña"> 
+    </form>
+{% endblock %}  
+
+
