--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -1,1 +1,15 @@
 {% extends './layout.html' %}
+
+
+{% block body %} 
+
+
+<div><input class="number" type="number" required></div>
+<div><input class="number" type="number" required></div>
+<div><input class="number" type="number" required></div>
+<div><input class="number" type="number" required></div>
+<div><input class="number" type="number" required></div>
+
+
+
+{% endblock %}
