--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -11,3 +11,12 @@ body {
     border-color: black;
     border-radius: 20%; 
 }
+
+.number{
+
+    margin: 20px;
+    width: 30px;
+    height:30px;
+    position: relative;
+    
+}
