--- a/app/templates/registrate.html
+++ b/app/templates/registrate.html
@@ -15,7 +15,7 @@
      
      <div class="input-contenedor">
          <i class="fas fa-user icon"></i>
-         <input type="text" placeholder="Nombre Completo">
+         <input required type="text" placeholder="Nombre Completo">
          
          </div>
          
@@ -27,10 +27,10 @@
          
          <div class="input-contenedor">
         <i class="fas fa-key icon"></i>
-         <input type="password" placeholder="Contraseña">
+         <input required type="password" placeholder="Contraseña">
          
          </div>
-         <input type="submit" value="Registrate" class="button">
+         <input required type="submit" value="Crear Cuenta" class="button">
          
          <form>
             <a href="http://127.0.0.1:5000/">
