--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -5,11 +5,11 @@
 <h1>Ingrese cinco numeros</h1>
 
 
-<rect /><input class="number" type="number" required></rect>
-<rect /><input class="number" type="number" required></rect>
-<rect /><input class="number" type="number" required></rect>
-<rect /><input class="number" type="number" required></rect>
-<rect /><input class="number" type="number" required></rect>
+<rect /><input class="number" type="number" required min="0" pattern="^[0-10]+" ></rect>
+<rect /><input class="number" type="number" required min="0" pattern="^[0-10]+" ></rect>
+<rect /><input class="number" type="number" required min="0" pattern="^[0-10]+" ></rect>
+<rect /><input class="number" type="number" required min="0" pattern="^[0-10]+" ></rect>
+<rect /><input class="number" type="number" required min="0" pattern="^[0-10]+" ></rect>
 
 <input type="submit" value="Jugar" class="button">
 <body>
